# melody_generator

./: .gitignore  setup.cfg
src/melodygenerator/: enums.py  models.py
src/melodygenerator/config/: data.ini  get.py
src/melodygenerator/data/: constants.py  enums.py  get_data.py  midi_utils.py
src/melodygenerator/scripts/: generate_melody.py
tests/unit/melodygenerator/: test_models.py
tests/unit/melodygenerator/config/: test_get.py
