[metadata]
name = melodygenerator
author = Dayal Madan
description = Probabilistic Melody Generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = melody, midi, music
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    click
    midiutil
    pygame

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    generate_melody = melodygenerator.scripts.generate_melody:main

[options.extras_require]
dev =
    black
    flake8
test =
    pytest

[options.package_data]
* =
    *.ini
    *.txt
    README.md